  be rolled up. This should be sent as the ``stacktrace`` attribute.
- The exception interface now supports of chained exceptions, and should
  be sent as a list of exception values. Check the updated documentation for
  ordering details.

Alerts
======

A basic alert system has been added.

- Configured at the project level.
- Signaled via Plugin.on_alert.

Other Changes
=============

- Activity feeds will now attempt to filter out some duplicates.
- Tags now show on the event details page.
- Corrected some invalid behavior when storing tags with an individual event.
- Plugin.get_tag_values was added.
- A new team select dashboard exists if you are a member of multiple teams.

Version 5.4.0
-------------

SENTRY_PUBLIC now dictates whether or not a Sentry install should be considered
accessible by all users or not. This should better solve the use-case of companies
hosting a Sentry instance internally and not necessarily needing the permissions
that teams give you.

If enabled, all teams and all projects will be accessible all members (for any endpoint
which does not require a certain level of access). Project.is_public now dictates the
implied state of all events, but will not allow a non-member to browse events.

Additionally, this includes the following other items:

- [Important!] The URLS for social authentication have been moved.
- Improved rendering of data values in all interfaces.
- django-compressor was replaced with django-static-compiler.
- A better defined public view of events (which removes several items from being visible).
- Improved SourceMap discovery.
- Most events will no longer cause a hard error when validation fails. Instead we attempt
  to drop any non-required data so that at least a partial event is stored.
- MessageCountByMinute was renamed to GroupCountByMinute.
- MessageFilterValue was renamed to GroupTag.
- Syntax highlighting was disabled (pending performance solutions).
- Added Team.date_added column.


Version 5.3.0
-------------