@@ -59,7 +59,6 @@ install_requires = [
     'celery>=3.0.15,<3.1.0',
     'django-crispy-forms>=1.2.3,<1.3.0',
     'Django>=1.4.5,<1.5',
-    'django-indexer>=0.3.0,<0.4.0',
     'django-paging>=0.2.4,<0.3.0',
     'django-picklefield>=0.3.0,<0.4.0',
     'django-static-compiler>=0.3.0,<0.4.0',
